Chaged section ids to classes

--- a/index.html
+++ b/index.html
@@ -12,22 +12,23 @@
 </head>
 
 <body>
-    <div class="wrapper">    
-        <nav>
-            <ul class="navigation">
-                <li><a href="#">About me</a></li>
-                <li><a href="#">Skills</a></li>
-                <li><a href="#">Portfolio</a></li>
-                <li><a href="#">Contact</a></li>
-            </ul>
-        </nav>
-
-        <header>
+    <div class="wrapper">   
+        <header> 
+            <nav>
+                <ul class="navigation">
+                    <li><a href="#">About me</a></li>
+                    <li><a href="#">Skills</a></li>
+                    <li><a href="#">Portfolio</a></li>
+                    <li><a href="#">Contact</a></li>
+                </ul>
+            </nav>
+        </header>
+        <section class="page_top">
             <h1>Welcome!</h1>
             <h2>My name is Designer.</h2>
-        </header>
+        </section>
 
-        <section id="about_me">
+        <section class="about_me">
             <div class="basic_info">
                 <p>Full Name: Designer</p>
                 <p>Age: 21 Years</p>
@@ -40,7 +41,7 @@
             </div>
         </section>
 
-        <section id="skills">
+        <section class="skills">
             <div>
                 <div>
                     <h4>UX/UI</h4>
@@ -57,11 +58,11 @@
             </div>
         </section>
 
-        <section id="portfolio">
+        <section class="portfolio">
 
         </section>
 
-        <section id="contact">
+        <section class="contact">
             <div>
                 <h2>Let's start!</h2>
                 <form>
@@ -88,7 +89,7 @@
             </div>
         </section>
 
-        <footer id="footer">
+        <footer class="footer">
             <p>Copyrights C 2019 CodersCrew</p>
         </footer>
     </div>
