Added "About me" section styling

--- a/index.html
+++ b/index.html
@@ -29,29 +29,37 @@
         </section>
 
         <section class="about_me">
-            <div class="basic_info">
-                <p>Full Name: Designer</p>
-                <p>Age: 21 Years</p>
-                <p>Profile: Fullstack</p>
-                <p>Telephone: +48 123-456-789</p>
-                <p>E-mail: designer24@gmail.com</p>
-            </div>
-            <div class="details">
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla sapien odio, fermentum sed magna ut, venenatis bibendum nisl. Curabitur ut ullamcorper felis, nec condimentum nisi. Integer eu quam mauris. Fusce bibendum suscipit aliquam. Integer lacus sapien, fringilla at nunc non, auctor egestas sapien. Mauris varius lacus a mi egestas viverra. Nullam mattis sagittis nisl ac pharetra. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae.
+            <h1>About me</h1>
+            <div class="card">
+                <div class="basic_info card_section card_divider">
+                    <ul>
+                        <li>Full Name: Designer</li>
+                        <li>Age: 21 Years</li>
+                        <li>Profile: Fullstack</li>
+                        <li>Telephone: +48 123-456-789</li>
+                        <li>E-mail: designer24@gmail.com</li>
+                    </ul>
+                </div>
+                <div class="details card_section">
+                    <p>
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla sapien odio, fermentum sed magna ut, venenatis bibendum nisl. Curabitur ut ullamcorper felis, nec condimentum nisi. Integer eu quam mauris. Fusce bibendum suscipit aliquam. Integer lacus sapien, fringilla at nunc non, auctor egestas sapien. Mauris varius lacus a mi egestas viverra. Nullam mattis sagittis nisl ac pharetra. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae.
+                    </p>
+                </div>
             </div>
         </section>
 
         <section class="skills">
-            <div>
-                <div>
+            <h1>Skills</h1>
+            <div class="card">
+                <div class="card_section card_divider">
                     <h4>UX/UI</h4>
                     <p>Figma</p>
                 </div>
-                <div>
+                <div class="card_section card_divider">
                     <h4>Front End</h4>
                     <p>Html, CSS, JavaScript</p>
                 </div>
-                <div>
+                <div class="card_section">
                     <h4>Back End</h4>
                     <p>Node.js, .NET</p>
                 </div>
