Added styling to portfolio elements

--- a/index.html
+++ b/index.html
@@ -67,7 +67,28 @@
         </section>
 
         <section class="portfolio">
-
+            <h1>Portfolio</h1>
+            <div class="images_container">
+                <div class="shaded_img">
+                    <img src="https://placeimg.com/640/480/tech" alt="">
+                    <span class="text_overlay">
+                        <h2>Design</h2>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce ac magna sapien. Integer tempus luctus elementum. Cras id magna nulla. Donec nec pulvinar enim. </p>
+                        <button type="button">View</button>
+                    </span>
+                </div>
+                <img src="https://placeimg.com/640/480/architecture" alt="">
+                <img src="https://placeimg.com/640/480/tech" alt="">
+                <img src="https://placeimg.com/640/480/sepia" alt="">
+                <div class="shaded_img">
+                    <img src="https://placeimg.com/640/480/nature" alt="">
+                    <span class="text_overlay">
+                        <h2>Design project</h2>
+                        <p>Curabitur non enim rhoncus, semper quam in, placerat nulla. Curabitur viverra sem lorem, ut hendrerit ipsum placerat ac. Phasellus a neque mauris. </p>
+                        <button type="button">View</button>
+                    </span>
+                </div>
+            </div>
         </section>
 
         <section class="contact">
