Added contact section and footer styling

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                     <span class="text_overlay">
                         <h2>Design</h2>
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce ac magna sapien. Integer tempus luctus elementum. Cras id magna nulla. Donec nec pulvinar enim. </p>
-                        <button type="button">View</button>
+                        <button class="btn" type="button">View</button>
                     </span>
                 </div>
                 <img src="https://placeimg.com/640/480/architecture" alt="">
@@ -85,21 +85,21 @@
                     <span class="text_overlay">
                         <h2>Design project</h2>
                         <p>Curabitur non enim rhoncus, semper quam in, placerat nulla. Curabitur viverra sem lorem, ut hendrerit ipsum placerat ac. Phasellus a neque mauris. </p>
-                        <button type="button">View</button>
+                        <button class="btn" type="button">View</button>
                     </span>
                 </div>
             </div>
         </section>
 
         <section class="contact">
-            <div>
+            <div class="contact_form">
                 <h2>Let's start!</h2>
                 <form>
-                    <input type="text" value="Name">
-                    <input type="text" value="Your e-mail adress">
-                    <input type="text" value="Topic">
-                    <input type="text" value="Message">
-                    <button type="submit">Send</button>
+                    <input type="text" placeholder="Name">
+                    <input type="text" placeholder="Your e-mail adress">
+                    <input type="text" placeholder="Topic">
+                    <input type="text" placeholder="Message">
+                    <button class="btn" type="submit">Send</button>
                 </form>
             </div>
             <div class="contact_info">
@@ -110,16 +110,16 @@
                     <li></li>
                     <li></li>
                 </ul>
-                <p>Designer</p>
-                <p>Poland, Wrocław</p>
+                <p><b>Designer</b></p>
+                <p><b>Poland, Wrocław</b></p>
                 <p>ul. Tęczowa 12/3 50-000</p>
                 <p>+48 123-456-789</p>
-                <p>designer24@gmail.com</p>
+                <p><u>designer24@gmail.com</u></p>
             </div>
         </section>
 
         <footer class="footer">
-            <p>Copyrights C 2019 CodersCrew</p>
+            <p>Copyrights &#169 2019 CodersCrew</p>
         </footer>
     </div>
         
