--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="fontawesome-free-5.15.1-web/css/all.css">
     <title>CodersCamp | Projekt 1 - HTML i CSS</title>
     <meta name="description" content="CodersCamp to darmowy, otwarty kurs programowania webowego we Wrocławiu. Sprawdź, czego nauczysz się na CodersCamp i spróbuj swoich sił w branży IT!">
 
@@ -14,6 +15,10 @@
 <body>
     <div class="wrapper">   
         <header> 
+            <div class="logo">
+                <img src="images/Dev-logo.png" alt="">
+                <h4>Dev</h4>
+            </div>
             <nav>
                 <ul class="navigation">
                     <li><a href="#">About me</a></li>
@@ -26,12 +31,19 @@
         <section class="page_top">
             <h1>Welcome!</h1>
             <h2>My name is Designer.</h2>
+            <div class="icons_list">
+                <a href="#"><img class="icon" src="images/github-icon-y.png" alt=""></a>
+                <a href="#"><img class="icon" src="images/linkedin-icon-y.png" alt=""></a>
+                <a href="#"><img class="icon" src="images/twitter-icon-y.png" alt=""></a>
+                <a href="#"><img class="icon" src="images/fb-icon-y.png" alt=""></a>   
+            </div>
         </section>
 
         <section class="about_me">
             <h1>About me</h1>
             <div class="card">
                 <div class="basic_info card_section card_divider">
+                    <img src="images/about-me-img.png" alt="">
                     <ul>
                         <li>Full Name: Designer</li>
                         <li>Age: 21 Years</li>
@@ -52,14 +64,17 @@
             <h1>Skills</h1>
             <div class="card">
                 <div class="card_section card_divider">
+                    <img src="images/ui-icon.png" alt="">
                     <h4>UX/UI</h4>
                     <p>Figma</p>
                 </div>
                 <div class="card_section card_divider">
+                    <img src="images/frontend-icon.png" alt="">
                     <h4>Front End</h4>
                     <p>Html, CSS, JavaScript</p>
                 </div>
                 <div class="card_section">
+                    <img src="images/backend-icon.png" alt="">
                     <h4>Back End</h4>
                     <p>Node.js, .NET</p>
                 </div>
@@ -103,13 +118,16 @@
                 </form>
             </div>
             <div class="contact_info">
+                <div class="msg">
+                    <img src="images/msg-icon.png" alt="">
+                </div>
                 <p>Please describe your question. Send me a message and I will answer you as soon as possible!</p>
-                <ul>
-                    <li></li>
-                    <li></li>
-                    <li></li>
-                    <li></li>
-                </ul>
+                <div class="icons_list">
+                    <a href="#"><img class="icon" src="images/github-icon-w.png" alt=""></a>
+                    <a href="#"><img class="icon" src="images/linkedin-icon-w.png" alt=""></a>
+                    <a href="#"><img class="icon" src="images/twitter-icon-w.png" alt=""></a>
+                    <a href="#"><img class="icon" src="images/fb-icon-w.png" alt=""></a>
+                </div>
                 <p><b>Designer</b></p>
                 <p><b>Poland, Wrocław</b></p>
                 <p>ul. Tęczowa 12/3 50-000</p>
