Added styling for tablets

--- a/index.html
+++ b/index.html
@@ -114,33 +114,35 @@
         </section>
 
         <section id="contact" class="contact">
-            <div class="contact_form">
-                <h2>Let's start!</h2>
-                <form>
-                    <input type="text" placeholder="Name">
-                    <input type="text" placeholder="Your e-mail adress">
-                    <input type="text" placeholder="Topic">
-                    <input type="text" placeholder="Message">
-                    <button class="btn" type="submit">Send</button>
-                </form>
-            </div>
-            <div class="contact_info">
-                <div class="msg">
-                    <img src="images/msg-icon.png" alt="">
+            <div class="contact_card">           
+                <div class="contact_form">
+                    <h2>Let's start!</h2>
+                    <form>
+                        <input type="text" placeholder="Name">
+                        <input type="text" placeholder="Your e-mail adress">
+                        <input type="text" placeholder="Topic">
+                        <textarea name="Message" id="" cols="30" rows="6" placeholder="Message"></textarea>
+                        <button class="btn" type="submit">Send</button>
+                    </form>
                 </div>
-                <p>Please describe your question. Send me a message and I will answer you as soon as possible!</p>
-                <div class="icons_list">
-                    <a href="#"><img class="icon" src="images/github-icon-w.png" alt=""></a>
-                    <a href="#"><img class="icon" src="images/linkedin-icon-w.png" alt=""></a>
-                    <a href="#"><img class="icon" src="images/twitter-icon-w.png" alt=""></a>
-                    <a href="#"><img class="icon" src="images/fb-icon-w.png" alt=""></a>
+                <div class="contact_info">
+                    <div class="msg">
+                        <img src="images/msg-icon.png" alt="">
+                    </div>
+                    <p>Please describe your question. Send me a message and I will answer you as soon as possible!</p>
+                    <div class="icons_list">
+                        <a href="#"><img class="icon" src="images/github-icon-w.png" alt=""></a>
+                        <a href="#"><img class="icon" src="images/linkedin-icon-w.png" alt=""></a>
+                        <a href="#"><img class="icon" src="images/twitter-icon-w.png" alt=""></a>
+                        <a href="#"><img class="icon" src="images/fb-icon-w.png" alt=""></a>
+                    </div>
+                    <p><b>Designer</b></p>
+                    <p><b>Poland, Wrocław</b></p>
+                    <p>ul. Tęczowa 12/3 50-000</p>
+                    <p>+48 123-456-789</p>
+                    <p><u>designer24@gmail.com</u></p>
                 </div>
-                <p><b>Designer</b></p>
-                <p><b>Poland, Wrocław</b></p>
-                <p>ul. Tęczowa 12/3 50-000</p>
-                <p>+48 123-456-789</p>
-                <p><u>designer24@gmail.com</u></p>
-            </div>
+            </div>    
         </section>
 
         <footer class="footer">
