Swapped font px size for rem scaling

--- a/index.html
+++ b/index.html
@@ -114,6 +114,7 @@
         </section>
 
         <section id="contact" class="contact">
+            <h1>Contact me</h1>
             <div class="contact_card">           
                 <div class="contact_form">
                     <h2>Let's start!</h2>
