Finished desktop styling

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <script src="https://kit.fontawesome.com/a8fca9087a.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;700&family=Ubuntu:wght@400;700&display=swap" rel="stylesheet">    
@@ -33,10 +34,10 @@
             <h1>Welcome!</h1>
             <h2>My name is Designer.</h2>
             <div class="icons_list">
-                <a href="#"><img class="icon" src="images/github-icon-y.png" alt=""></a>
-                <a href="#"><img class="icon" src="images/linkedin-icon-y.png" alt=""></a>
-                <a href="#"><img class="icon" src="images/twitter-icon-y.png" alt=""></a>
-                <a href="#"><img class="icon" src="images/fb-icon-y.png" alt=""></a>   
+                <a href="#"><i class="fab fa-github-square"></i></a>
+                <a href="#"><i class="fab fa-linkedin"></i></a>
+                <a href="#"><i class="fab fa-twitter-square"></i></a>
+                <a href="#"><i class="fab fa-facebook-square"></i></a>   
             </div>
         </section>
 
@@ -90,27 +91,32 @@
 
         <section id="portfolio" class="portfolio">
             <h1>Portfolio</h1>
-            <div class="images_container">
-                <div class="shaded_img">
-                    <img src="images/portfolio-1.png" alt="">
+            <ul class="images_container">
+                <li class="image_cell shaded_img">
                     <span class="text_overlay">
                         <h2>Design</h2>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce ac magna sapien. Integer tempus luctus elementum. Cras id magna nulla. Donec nec pulvinar enim. </p>
                         <button class="btn" type="button">View</button>
-                    </span>
-                </div>
-                <img src="images/portfolio-2.png" alt="">
-                <img src="images/portfolio-3.png" alt="">
-                <img src="images/portfolio-4.png" alt="">
-                <div class="shaded_img">
-                    <img src="images/portfolio-5.png" alt="">
+                    </span>   
+                    <img src="images/portfolio-1.png" alt="">                                 
+                </li>
+                <li class="image_cell">
+                    <img src="images/portfolio-2.png" alt="">
+                </li>
+                <li class="image_cell">
+                    <img src="images/portfolio-3.png" alt="">
+                </li>
+                <li class="image_cell">
+                    <img src="images/portfolio-4.png" alt="">
+                </li>
+                <li class="image_cell shaded_img">
                     <span class="text_overlay">
                         <h2>Design project</h2>
-                        <p>Curabitur non enim rhoncus, semper quam in, placerat nulla. Curabitur viverra sem lorem, ut hendrerit ipsum placerat ac. Phasellus a neque mauris. </p>
                         <button class="btn" type="button">View</button>
                     </span>
-                </div>
-            </div>
+                    <img src="images/portfolio-5.png" alt="">  
+                </li>
+                <li class="image_cell"></li>
+            </ul>
         </section>
 
         <section id="contact" class="contact">
@@ -132,10 +138,10 @@
                     </div>
                     <p>Please describe your question. Send me a message and I will answer you as soon as possible!</p>
                     <div class="icons_list">
-                        <a href="#"><img class="icon" src="images/github-icon-w.png" alt=""></a>
-                        <a href="#"><img class="icon" src="images/linkedin-icon-w.png" alt=""></a>
-                        <a href="#"><img class="icon" src="images/twitter-icon-w.png" alt=""></a>
-                        <a href="#"><img class="icon" src="images/fb-icon-w.png" alt=""></a>
+                        <a href="#"><i class="fab fa-github-square"></i></a>
+                        <a href="#"><i class="fab fa-linkedin"></i></a>
+                        <a href="#"><i class="fab fa-twitter-square"></i></a>
+                        <a href="#"><i class="fab fa-facebook-square"></i></a>
                     </div>
                     <p><b>Designer</b></p>
                     <p><b>Poland, Wrocław</b></p>
